--- a/judo_profiles/main/templates/positions.html
+++ b/judo_profiles/main/templates/positions.html
@@ -42,8 +42,30 @@
             border-style: solid;
             padding: 6px;
             margin: 3px;
+            display: inline-block;
+            margin-left: 15%;
         }
         #image_container {
+            width: fit-content;
+        }
+        #image_desc {
+            border-width: 3px;
+            border-color: black;
+            border-style: solid;
+            width: fit-content;
+            display: inline-block;
+            font-weight: bold;
+            font-size: x-large;
+        }
+        button {
+            border-width: 3px;
+            border-color: black;
+            border-style: solid;
+            width: fit-content;
+            background-color: white;
+            cursor: pointer;
+        }
+        #positions {
             width: fit-content;
             border-width: 3px;
             border-color: black;
@@ -51,47 +73,43 @@
             padding: 6px;
             margin: 3px;
         }
-        #image_desc {
-            border-width: 3px;
-            border-color: black;
-            border-style: solid;
+        #visual {
             width: fit-content;
-        }
-        #delete {
-            border-width: 3px;
-            border-color: black;
-            border-style: solid;
-            width: fit-content;
-            background-color: white;
         }
     </style>
     <body>
-        <div id="choices">
-            <a>Rechte Hand =</a>
-            <div class="r position option 1" id="oR1">1</div>
-            <div class="r position option 2" id="oR2">2</div>
-            <div class="r position option 3" id="oR3">3</div>
-            <div class="r position option 4" id="oR4">4</div>
-            <br>
-            <br>
-            <a>Linke Hand =</a>
-            <div class="l position option 1" id="oL1">1</div>
-            <div class="l position option 2" id="oL2">2</div>
-            <div class="l position option 3" id="oL3">3</div>
-            <div class="l position option 4" id="oL4">4</div>
-        </div>
-        <div id="image_container">
-            <h2 id="image_desc">Griffposition</h2>
-            <button id="delete" onclick="delClick()">Löschen</button>
-            <img src="../resources/image.png" id="image">
-            <div class="r move position 1" id="pR1">1</div>
-            <div class="r move position 2" id="pR2">2</div>
-            <div class="r move position 3" id="pR3">3</div>
-            <div class="r move position 4" id="pR4">4</div>
-            <div class="l move position 1" id="pL1">1</div>
-            <div class="l move position 2" id="pL2">2</div>
-            <div class="l move position 3" id="pL3">3</div>
-            <div class="l move position 4" id="pL4">4</div>
+        <div id="visual">
+            <div id="positions">
+                <p id="image_desc">Griffpositionen</p>
+                <div id="choices">
+                    <a>Rechte Hand =</a>
+                    <div class="r position option 1" id="oR1">1</div>
+                    <div class="r position option 2" id="oR2">2</div>
+                    <div class="r position option 3" id="oR3">3</div>
+                    <div class="r position option 4" id="oR4">4</div>
+                    <br>
+                    <br>
+                    <a>Linke Hand =</a>
+                    <div class="l position option 1" id="oL1">1</div>
+                    <div class="l position option 2" id="oL2">2</div>
+                    <div class="l position option 3" id="oL3">3</div>
+                    <div class="l position option 4" id="oL4">4</div>
+                </div>
+                <br>
+                <button id="delete" onclick="delClick()">Löschen</button>
+                <button id="submit" onclick="submit()">Submit</button>
+                <div id="image_container">
+                    <img src="../resources/image.png" id="image">
+                    <div class="r move position 1" id="pR1">1</div>
+                    <div class="r move position 2" id="pR2">2</div>
+                    <div class="r move position 3" id="pR3">3</div>
+                    <div class="r move position 4" id="pR4">4</div>
+                    <div class="l move position 1" id="pL1">1</div>
+                    <div class="l move position 2" id="pL2">2</div>
+                    <div class="l move position 3" id="pL3">3</div>
+                    <div class="l move position 4" id="pL4">4</div>
+                </div>
+            </div>
         </div>
     </body>
     <script>
@@ -127,19 +145,9 @@
         function mouseDownImg(e){
             if (move != null){
                 move.style.display = "flex"
-                placeRelative((e.clientY - move.clientHeight / 2 - image.offsetTop) / image.clientHeight, 
-                                (e.clientX - move.clientWidth / 2 - image.offsetLeft) / image.clientWidth)
+                placeRelative(move, (e.clientY + window.scrollY - move.clientHeight / 2 - image.offsetTop) / image.clientHeight, 
+                                (e.clientX + window.scrollX - move.clientWidth / 2 - image.offsetLeft) / image.clientWidth)
                 move.addEventListener("mousedown", mouseDownPos)
-            }
-        }
-
-        function delClick(){
-            for (let i = 0; i < positions.length; i++) {
-                if (positions.item(i).style.display == "flex"){
-                    positions.item(i).style.borderColor = "red"
-                    positions.item(i).style.cursor = "not-allowed"
-                    delete_mode = true
-                }
             }
         }
 
@@ -170,7 +178,7 @@
             newY = startY - e.clientY
             startX = e.clientX
             startY = e.clientY
-            placeRelative((move.offsetTop - newY - image.offsetTop) / image.clientHeight,
+            placeRelative(move, (move.offsetTop - newY - image.offsetTop) / image.clientHeight,
                             (move.offsetLeft - newX - image.offsetLeft) / image.clientWidth)
         }
 
@@ -179,10 +187,10 @@
             move.removeEventListener("mousemove", mouseMovePos)
         }
 
-        function placeRelative(relativeY, relativeX){
+        function placeRelative(object, relativeY, relativeX){
             borderWidth = parseInt(window.getComputedStyle(move).borderWidth)
-            maxY = 1 - (move.clientHeight + 2 * borderWidth) / image.clientHeight
-            maxX = 1 - (move.clientWidth + 2 * borderWidth) / image.clientWidth
+            maxY = 1 - (object.clientHeight + 2 * borderWidth) / image.clientHeight
+            maxX = 1 - (object.clientWidth + 2 * borderWidth) / image.clientWidth
 
             if (relativeY >= maxY){
                 relativeY = maxY
@@ -195,10 +203,15 @@
                 relativeX = 0
             }
 
-            move.style.top = relativeY * image.clientHeight + image.offsetTop + "px"
-            move.style.left = relativeX * image.clientWidth + image.offsetLeft + "px"
+            object.style.top = relativeY * image.clientHeight + image.offsetTop + "px"
+            object.style.left = relativeX * image.clientWidth + image.offsetLeft + "px"
+        }
 
-            console.log({relativeY, relativeX})
+        function getRelative(object){
+            y = (parseInt(object.style.top) - image.offsetTop) / image.clientHeight
+            x = (parseInt(object.style.left) - image.offsetLeft) / image.clientWidth
+            
+            return [y, x]
         }
 
         function colorSelected(classes, color){
@@ -214,6 +227,27 @@
             } else if (id[0] == "o"){
                 return "p" + id.slice(1)
             }
+        }
+
+        function delClick(){
+            for (let i = 0; i < positions.length; i++) {
+                if (positions.item(i).style.display == "flex"){
+                    positions.item(i).style.borderColor = "red"
+                    positions.item(i).style.cursor = "not-allowed"
+                    delete_mode = true
+                }
+            }
+        }
+
+        function submit(){
+            pos = []
+            for (let i = 0; i < positions.length; i++) {
+                if (positions.item(i).style.display == "flex"){
+                    x = getRelative(positions.item(i))
+                    pos.push([positions.item(i).className.slice(-1), positions.item(i).className[0], x[0], x[1]])
+                }
+            }
+            console.log(pos)
         }
     </script>
 </html>
