--- a/judo_profiles/main/templates/positions.html
+++ b/judo_profiles/main/templates/positions.html
@@ -129,6 +129,7 @@
         </div>
         <form method="post">
             {% csrf_token %}
+            <button onclick="get_own_techniques()">test</button>
             <div id="general_container">
                 <p id="title">Kämpferprofil von</p>
                 <input type="text" placeholder="Nachname">, 
